# IMEDIA_Project_v2

./: .env.example  LICENSE  README.md  docker-compose.yaml  pyproject.toml
db/: imedia.sqlite
embeddings/: sentence-transformers_all-MiniLM-L6-v2_metadata_NTBK_20251202T084227.json  sentence-transformers_all-MiniLM-L6-v2_test_20251202T094946_NTBK_metadata.json  sentence-transformers_all-MiniLM-L6-v2_test_20251202T101620_NTBK_metadata.json  sentence-transformers_all-MiniLM-L6-v2_test_20251202T223535_NTBK_embeddings.npy  sentence-transformers_all-MiniLM-L6-v2_test_20251202T223535_NTBK_metadata.json  sentence-transformers_all-MiniLM-L6-v2_test_20251202T223845_NTBK_metadata.json  sentence-transformers_all-MiniLM-L6-v2_test_20251202T223930_NTBK_metadata.json  sentence-transformers_all-MiniLM-L6-v2_test_20251202T231949_NTBK_metadata.json  sentence-transformers_all-MiniLM-L6-v2_train_20251202T094946_NTBK_metadata.json  sentence-transformers_all-MiniLM-L6-v2_train_20251202T101620_NTBK_metadata.json  sentence-transformers_all-MiniLM-L6-v2_train_20251202T223535_NTBK_metadata.json  sentence-transformers_all-MiniLM-L6-v2_train_20251202T223845_NTBK_metadata.json  sentence-transformers_all-MiniLM-L6-v2_train_20251202T223930_NTBK_metadata.json  sentence-transformers_all-MiniLM-L6-v2_train_20251202T231949_NTBK_metadata.json  sentence-transformers_all-MiniLM-L6-v2_val_20251202T094946_NTBK_embeddings.npy  sentence-transformers_all-MiniLM-L6-v2_val_20251202T094946_NTBK_metadata.json  sentence-transformers_all-MiniLM-L6-v2_val_20251202T101620_NTBK_metadata.json  (+4 more)
notebooks/: test.ipynb  (+6 more)
(+666 files in other folders)
