[project]
name = "imedia"
version = "0.1.0"
description = "Reddit → Medallion (raw/bronze/silver/gold) con Polars + SQLite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "praw>=7.8.0",
  "polars>=1.5.0",
  "python-dotenv>=1.0.1",
  "seaborn>=0.13.2",
  "wordcloud>=1.9.4",
  "pyarrow>=14,<16",
  "pandas>=2.2,<3",
  "scikit-learn>=1.7.2",
  "xgboost>=3.1.1",
  "hyperopt>=0.2.7",
  "mlflow>=3.6.0",
  "plotly>=6.5.0",
  "nbformat>=5.10.4",
  "ipykernel>=7.1.0",
  "jupyter>=1.1.1",
  "transformers>=4.57.3",
  "torch>=2.9.1",
  "sentence-transformers>=5.1.2",
]

[project.optional-dependencies]
dev = ["ruff>=0.5.0","pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
